--- a/TestViewModel/app/build.gradle
+++ b/TestViewModel/app/build.gradle
@@ -46,6 +46,8 @@ android {
 }
 
 dependencies {
+    //LiveDataの追加
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
